# rmsh

./: rmsh.code-workspace
client/: Cargo.toml  build.rs
client/src/: main.rs
metadata/: ip.txt
server/: .gitignore  main.go
